Made changes to self driving description

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class="project-info">
                         <h3>Self Driving Car Simulator</h3>
                         <p>
-                            Trained a driving car simulator(Udacity) with data from a manual run to work autonomously. 
+                            Used a CNN to drive a simulated car(Udacity) with data from a manual run to work autonomously by predicting steering angle from input images. 
 	          Three virtual cameras on the front, left and right of the car captured stills. These served as training images.  Image processing techniques were used to produce more data by adding random shadows, flipping, cropping, shifting, etc.
                         </p>
                         <a href="#">View Project</a>
