--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                 </p>
 	<a href="https://abstracts.g-node.org/conference/BC20/abstracts#/uuid/189d66a0-ba8e-4017-92a9-8ba063a62391">View Conference poster</a>
 	</br>
-	<a href="https://sites.google.com/view/spatialnavigators/cns-lab-home?authuser=0">Spatial Navigators</a>
+	<a href="https://sites.google.com/view/spatialnavigators/home?authuser=0">Spatial Navigators</a>
             </div>
 
             <div data-date="February 2019 – March 2019">
@@ -155,7 +155,7 @@
                         <p>
                             Trained an unconditional DC-GAN from scratch to generate MNIST-like instances of the alphabets G, A and N.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/nrohan09-cloud/G.A.N">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -169,10 +169,10 @@
                     <div class="project-info">
                         <h3>Self Driving Car Simulator</h3>
                         <p>
-                            Used a CNN to drive a simulated car(Udacity) with data from a manual run to work autonomously by predicting steering angle from input images. 
-	          Three virtual cameras on the front, left and right of the car captured stills. These served as training images.  Image processing techniques were used to produce more data by adding random shadows, flipping, cropping, shifting, etc.
+                            Trained a driving car simulator(Udacity) with data from a manual run to work autonomously. 
+	          Three virtual cameras on the front, left and right of the car captured stills. These served as training images for a CNN.  Image processing techniques were used to produce more data by adding random shadows, flipping, cropping, shifting, etc.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/nrohan09-cloud/Self-Driving-Car">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -188,7 +188,7 @@
                         <p>
                             From the image of a blood smear under a microscope, retrieved the individual cells by finding the relevant contours, extracting and placing them on a black background, and then cropping them off the black background and feeding them to a Resnet-50 model trained to detect malaria with a validation accuracy of 97.3 percent.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/vishantbatta/Malar-Ai-Malaria-detection-using-deep-learning-models-on-blood-smear-slide">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -205,7 +205,7 @@
                             Worked under Dr Somak Bhattacharya. Made a face verifying system for security. Used HOG+Linear SVM to detect faces, then used face landmark estimation and affine transformation. Faces were then converted to 128-d embeddings using ResNet-34 and used for training/prediction.
 	   	Also used 68 coordinate facial landmark estimation to find the contour of the eyes and a drowsiness detector was made based on it by computing Eye Aspect Ratio.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/nrohan09-cloud/Driver-face-authentication-and-drowsiness-detector">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
@@ -219,8 +219,9 @@
         <h2 class="heading">Skills</h2>
         <ul>
             
-            	<li>OpenCV</li>
+            	<li>Tensorflow</li>
 	<li>Keras</li>
+	<li>OpenCV</li>
 	<li>sklearn</li>
 	<li>Jupyter Notebooks</li>
 	<li>Pandas</li>
@@ -228,6 +229,8 @@
 	<li>Matplotlib</li>
 	<li>Python</li>
             	<li>Java</li>
+	<li>MATLAB</li>
+	<li>Git</li>
           	<li>C</li>
             	<li>C++</li>
         </ul>
