Removed contact section for now

--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
             <li>
                 <a href="#skills">Skills</a>
             </li>
-            <li>
-                <a href="#contact">Contact</a>
-            </li>
+            
         </ul>
     </header>
     <!-- End header -->
@@ -153,7 +151,7 @@
                     <div class="project-info">
                         <h3>G.A.N</h3>
                         <p>
-                            Trained an unconditional DC-GAN from scratch to generate MNIST-like instances of the alphabets G, A and N.
+                            Trained an unconditional DC-GAN from scratch to generate EMNIST-like instances of the alphabets G, A and N.
                         </p>
                         <a href="https://github.com/nrohan09-cloud/G.A.N">View Project</a>
                     </div>
@@ -237,19 +235,7 @@
     </div>
     <!-- End #skills -->
 
-    <div id="contact">
-        <h2>Get in Touch</h2>
-        <div id="contact-form">
-            <form method="POST" action="https://formspree.io/email@email.com">
-                <input type="hidden" name="_subject" value="Contact request from personal website" />
-                <input type="email" name="_replyto" placeholder="Your email" required>
-                <textarea name="message" placeholder="Your message" required></textarea>
-                <button type="submit">Send</button>
-            </form>
-        </div>
-        <!-- End #contact-form -->
-    </div>
-    <!-- End #contact -->
+    
 
     <footer>
         <div class="container">
