--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        I am interested in generative computer vision, achieved with deep learning. Currently focussing on GANs and their applications. I like to work on projects involving image manipulation/enhancement like inpainting, super-resolution, deepfakes, de-fencing, denoising, de-hazing, pose transfer, etc, and on image generation tasks like face image generation, etc. 
+                        I am interested in generative computer vision, achieved with deep learning. Currently focussing on GANs and their applications. I like to work on projects involving image manipulation/enhancement like inpainting, super-resolution, deepfakes, de-fencing, denoising, de-hazing, pose transfer, etc, and on image generation tasks like face image generation, and many more 
                     </p>
                 </div>
             </div>
